Versión Final Memoria y Anexos

--- a/doc/latex/anexos.tex
+++ b/doc/latex/anexos.tex
@@ -8,6 +8,9 @@
 \usepackage{lmodern} % scalable font
 \usepackage{microtype}
 \usepackage{placeins}
+\usepackage{caption}
+\usepackage{dirtree}
+\usepackage{numprint}
 
 \RequirePackage{booktabs}
 \RequirePackage[table]{xcolor}
@@ -355,7 +358,7 @@
 % Datos de portada
 \title{X-Teeth \\Documentación Técnica}
 \author{Ismael Franco Hernando}
-\tutor{César Ignacio García Osorio y\\ José Miguel Ramírez Sanz}
+\tutor{César Ignacio García Osorio y \\\phantom{Turi: }José Miguel Ramírez Sanz}
 \date{\today}
 
 \begin{document}
