--- a/doc/latex/bibliografia.bib
+++ b/doc/latex/bibliografia.bib
@@ -26,3 +26,136 @@
   publisher={Elsevier}
 }
 
+@book{oliphant2006guide,
+  title={A guide to NumPy},
+  author={Oliphant, Travis E},
+  volume={1},
+  year={2006},
+  publisher={Trelgol Publishing USA}
+}
+
+@book{howse2013opencv,
+  title={OpenCV computer vision with python},
+  author={Howse, Joseph},
+  year={2013},
+  publisher={Packt Publishing Birmingham}
+}
+
+@inproceedings{ari2014matplotlib,
+  title={Matplotlib in python},
+  author={Ari, Niyazi and Ustazhanov, Makhamadsulton},
+  booktitle={2014 11th International Conference on Electronics, Computer and Computation (ICECCO)},
+  pages={1--6},
+  year={2014},
+  organization={IEEE}
+}
+
+@misc{ eswiki:137351442,
+       author = "Wikipedia",
+       title = "SciPy --- Wikipedia{,} La enciclopedia libre",
+       year = "2021",
+       url = "https://es.wikipedia.org/w/index.php?title=SciPy&oldid=137351442",
+       note = "[Internet; descargado 21-junio-2022]"
+}
+
+@incollection{imambi2021pytorch,
+  title={PyTorch},
+  author={Imambi, Sagar and Prakash, Kolla Bhanu and Kanagachidambaresan, GR},
+  booktitle={Programming with TensorFlow},
+  pages={87--104},
+  year={2021},
+  publisher={Springer}
+}
+
+@book{soares2002endodoncia,
+  title={Endodoncia. T{\'e}cnica y fundamentos},
+  author={Soares, Ilson Jos{\'e} and Goldberg, Fernando},
+  year={2002},
+  publisher={Ed. M{\'e}dica Panamericana}
+}
+
+@online{causas2020,
+  author = {{Clínica Dental Riosdent}},
+  year = {2020},
+  howpublished = {\url{https://clinicadentalriosdent.com/}},
+  urldate = {2022-06-23}
+}       
+
+@book{mitchell1997machine,
+  title={Machine learning},
+  author={Mitchell, Tom M and Mitchell, Tom M},
+  volume={1},
+  number={9},
+  year={1997},
+  publisher={McGraw-hill New York}
+}
+
+@article{palomino2009tecnicas,
+  title={T{\'e}cnicas de segmentaci{\'o}n en procesamiento digital de im{\'a}genes},
+  author={Palomino, Nora La Serna and Concha, Ulises Norberto Rom{\'a}n},
+  journal={Revista de investigaci{\'o}n de Sistemas e Inform{\'a}tica},
+  volume={6},
+  number={2},
+  pages={9--16},
+  year={2009}
+}
+
+@misc{ eswiki:141758410,
+       author = "Wikipedia",
+       title = "Visión artificial --- Wikipedia{,} La enciclopedia libre",
+       year = "2022",
+       url = "\url{https://es.wikipedia.org/w/index.php?title=Visi%C3%B3n_artificial&oldid=141758410}",
+       note = "[Internet; descargado 24-junio-2022]"
+}
+
+@misc{wu2019detectron2,
+	author =       {Yuxin Wu and Alexander Kirillov and Francisco Massa and
+	Wan-Yen Lo and Ross Girshick},
+	title =        {Detectron2},
+	howpublished = {\url{https://github.com/facebookresearch/detectron2}},
+	year =         {2019}
+}
+
+ @misc{ wiki:convo,
+   author = "Wikimedia Commons",
+   title = "File:Convolution arithmetic - Padding strides odd.gif --- Wikimedia Commons{,} the free media repository",
+   year = "2020",
+   url = "\url{https://commons.wikimedia.org/w/index.php?title=File:Convolution_arithmetic_-_Padding_strides_odd.gif&oldid=497515231}",
+   note = "[Online; fecha de acceso 27-Junio-2022]"
+ }
+ 
+  @misc{ wiki:pooling,
+   author = "Wikimedia Commons",
+   title = "File:Max pooling.png --- Wikimedia Commons{,} the free media repository",
+   year = "2021",
+   url = "\url{https://commons.wikimedia.org/w/index.php?title=File:Max_pooling.png&oldid=535187848}",
+   note = "[Online; fecha de acceso 27-Junio-2022]"
+ }
+ 
+ @article{castilla2021reconocimiento,
+  title={Reconocimiento de logotipos de marcas mediante Redes Neuronales de Convoluci{\'o}n ({CNN})},
+  author={Castilla Bravo, Ra{\'u}l and others},
+  year={2021}
+}
+
+@article{kang2020application,
+  title={Application of deep learning in dentistry and implantology},
+  author={Kang, Dae-Young and Duong, Hieu Pham and Park, Jung-Chul},
+  year={2020},
+  publisher={Journal of implantology and applied sciences}
+}
+
+@online{lsm2020proceso,
+  author = {{Librería Servicio Médico}},
+  year = {2020},
+  howpublished = {\url{http://www.libreriaserviciomedico.com/files/9676}},
+  urldate = {2022-06-23}
+}
+
+@inproceedings{renNIPS15fasterrcnn,
+    Author = {Shaoqing Ren and Kaiming He and Ross Girshick and Jian Sun},
+    Title = {Faster {R-CNN}: Towards Real-Time Object Detection
+             with Region Proposal Networks},
+    Booktitle = {Advances in Neural Information Processing Systems ({NIPS})},
+    Year = {2015}
+}
