--- a/doc/latex/tex/2_Objetivos_del_proyecto.tex
+++ b/doc/latex/tex/2_Objetivos_del_proyecto.tex
@@ -1,3 +1,35 @@
 \capitulo{2}{Objetivos del proyecto}
 
-Este apartado explica de forma precisa y concisa cuales son los objetivos que se persiguen con la realización del proyecto. Se puede distinguir entre los objetivos marcados por los requisitos del software a construir y los objetivos de carácter técnico que plantea a la hora de llevar a la práctica el proyecto.
+Este apartado contiene los objetivos del proyecto. Se pueden distinguir dos tipos: generales y técnicos. Dichos objetivos buscan cumplirse con el desarrollo del propio proyecto.
+
+\section{Objetivos Generales}
+Los objetivos generales del proyecto son:
+\begin{itemize}
+    \item Investigar y aplicar nuevas funcionalidades del \emph{deep learning} en la rama de la odontología.
+    \item Desarrollar una aplicación web, sencilla de usar y con un fácil acceso para todo el mundo.
+    \item Ayudar en el proceso de la endodoncia, de forma que la obtención de la longitud, actualmente hecha de forma manual, se pueda automatizar con la aplicación.
+    \item Intentar conseguir que el error de la aplicación en la estimación de la longitud del diente no sea superior a 0.5 milímetros.
+\end{itemize}
+
+\section{Objetivos Técnicos}
+Los objetivos técnicos del proyecto son:
+\begin{itemize}
+    \item Crear una aplicación web capaz de calcular la longitud de un diente a través de una radiografía.
+    \item Permitir el uso de la aplicación de dos modos distintos:
+    \begin{itemize}
+        \item Acceder directamente al \emph{notebook} en \emph{Google Colab}.
+        \item Usar \emph{ngrok} para acceder a la dirección web que contiene el \emph{notebook} con la aplicación en Gamma.
+    \end{itemize}
+    \item Usar el lenguaje de programación \emph{Python} para realizar las pruebas pertinentes y la aplicación final, junto con las distintas librerías que existen en \emph{Python}.
+    \item Conseguir que los tiempos de espera en la aplicación sean los más breves posibles.
+    \item Utilizar la plataforma de \emph{GitHub}, de forma que se vea reflejado el trabajo incremental que se lleva a cabo en cada \emph{sprint}.
+\end{itemize}
+
+\section{Objetivos Personales}
+Los objetivos marcados a nivel personal son:
+\begin{itemize}
+    \item Aprender sobre el proceso de la endodoncia, para poder investigar y desarrollar una aplicación que permita ayudar a los odontólogos en su trabajo.
+    \item Aplicar los conocimientos adquiridos a lo largo del grado universitario.
+    \item Mejorar los conocimientos de \emph{Python} y aplicar aquellos ya adquiridos.
+    \item Aprender sobre el \emph{deep learning} para conocer sus posibilidades y poder aplicarlas a lo largo del proyecto.
+\end{itemize}
