--- a/doc/latex/tex/6_Trabajos_relacionados.tex
+++ b/doc/latex/tex/6_Trabajos_relacionados.tex
@@ -1,3 +1,28 @@
 \capitulo{6}{Trabajos relacionados}
 
-Este apartado sería parecido a un estado del arte de una tesis o tesina. En un trabajo final grado no parece obligada su presencia, aunque se puede dejar a juicio del tutor el incluir un pequeño resumen comentado de los trabajos y proyectos ya realizados en el campo del proyecto en curso. 
+\section{Application of Deep Learning in Dentistry and
+Implantology}
+Autores: Dae-Young Kang, Hieu Pham Duong y Jung-Chul Park
+
+Este trabajo \cite{kang2020application} recoge los resultados de la investigación de algoritmos existentes de \emph{deep learning} en la rama de la odontología. Es una colaboración entre las Universidades de Dankook y de Vietnam, publicado en el año 2020.
+
+Lo primero que resaltan es que en la odontología se requiere una precisión muy elevada, ya que se trabaja con medidas milimétricas y un error humano puede tener consecuencias irreparables. Es por ello, que defienden que la inteligencia artificial y el \emph{deep learning} suponen una gran mejora de precisión y de detección de anomalías que pueden ser indetectables a la vista humana.
+
+En la parte de investigación se habla sobre la diversidad de aplicaciones que tiene el \emph{deep learning} en la odontología, y una de ellas es la segmentación e identificación de dientes (tarea que se ha llevado a cabo en ese proyecto), aunque no dice nada de cálculo de longitud de dientes.
+
+La conclusión final del artículo es que se espera que la utilización de algoritmos de \emph{deep learning} mejore los tiempos de trabajo de los dentistas y los resultados de los diferentes tratamientos, ayudando a los dentistas en casi todos los aspectos prácticos, como detección de dientes, detección y clasificación de enfermedades, evaluación de prótesis y reducción de errores de precisión.
+
+\section{Software Second-Opinion}
+La aplicación \emph{Second-Opinion}\footnote{Second-Opinion: \url{https://www.hellopearl.com/products/second-opinion}} es un \emph{software} de pago que permite a los odontólogos que la utilizan cargar sus radiografías y la aplicación, a través de la inteligencia artificial, calcula o muestra los valores que los odontólogos necesitan.
+
+Las principales tareas que realiza la aplicación son:
+\begin{itemize}
+    \item Detección de enfermedades.
+    \item Validación de implantes.
+    \item Segmentación de dientes.
+    \item Obtención del canal radicular.
+\end{itemize}
+
+Pese a ser un software muy completo, no incluye el cálculo de la longitud del diente, cosa que sí que realiza la aplicación de este proyecto.
+
+Para finalizar, este \emph{software} ha sido aprobado por la FDA (\emph{Food and Drugs Administration}, Administración de Alimentos y Medicamentos en español, en Estados Unidos)\footnote{Artículo aprobación software: \url{https://www.hellopearl.com/press-release/fda-clears-worlds-first-ai-software-to-read-dental-x-rays}}, para que los dentistas del país puedan utilizarlo con los pacientes. Además, esta aplicación ha sido la primera de este tipo en aprobarse en Estados Unidos por lo que se puede ver como es una rama en la que aún queda mucho por explorar.
